gateway/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway

spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 8080
      protocol: TCP
  selector:
    app: gateway
    type: http
